@@ -67,11 +67,11 @@ instead (see below for details).
 <th>Release Date</th></tr>
 <tr><td class="download">
 <a href="ftp://ftp.octave.org/pub/octave">Stable</a></td>
-<td class="download">3.2.2
-    (<a href="ftp://ftp.octave.org/pub/octave/octave-3.2.2.tar.gz">.tar.gz</a>)
-    (<a href="ftp://ftp.octave.org/pub/octave/octave-3.2.2.tar.bz2">.tar.bz2</a>)
+<td class="download">3.2.3
+    (<a href="ftp://ftp.octave.org/pub/octave/octave-3.2.3.tar.gz">.tar.gz</a>)
+    (<a href="ftp://ftp.octave.org/pub/octave/octave-3.2.3.tar.bz2">.tar.bz2</a>)
 </td>
-<td class="download">22 July 2009</td></tr>
+<td class="download">21 September 2009</td></tr>
 </table>
 </div>
 
