@@ -31,6 +31,16 @@
 
 <div class="section">
 <dl>
+<dt>September 21, 2009</dt>
+<dd>Version 3.2.3 has been released and is now available for ftp.
+Octave 3.2.3 is a bug-fixing release
+<a href="NEWS-3.2.html">NEWS</a> file for a list of
+user-visible changes in the 3.2.x series.</dd>
+<dt>September 12, 2009</dt>
+<dd>A new snapshot of the current development version of Octave is
+available for ftp (3.3.50).  You should only be using this version if you are
+interested in testing the latest features and don't mind hitting the
+occasional bug.</dd>
 <dt>July 22, 2009</dt>
 <dd>Version 3.2.2 has been released and is now available for ftp.
 Octave 3.2.2 is a bug-fixing release
